--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Untitled Document</title>
+  <title>Kim Hồng - Portfolio</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" type="text/css" charset="UTF-8"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css"
@@ -14,6 +14,7 @@
   <script src="js/app.js"></script>
   <link rel="stylesheet" href="style/style.css" />
   <link rel="stylesheet" href="./style/animate.css">
+
 </head>
 
 <body>
@@ -57,7 +58,8 @@
           <div class="linkbhc">
             <a href="https://www.behance.net/mckhang">
               <i class="fab fa-behance"></i>
-              <p>Let's see my project now!</p></a>
+              <p>Let's see my project now!</p>
+            </a>
           </div>
         </div>
         <div class="social">
@@ -93,11 +95,11 @@
   </section>
 
   <div class="box-brand">
-    <div class="box-brand-small wow bounceInDown" data-wow-duration="3s" >
+    <div class="box-brand-small wow bounceInDown" data-wow-duration="3s">
       <i class="fas fa-tint"></i>
       <p>UX-UI Design</p>
     </div>
-    <div class="box-brand-small wow bounceInDown" data-wow-duration="3s" >
+    <div class="box-brand-small wow bounceInDown" data-wow-duration="3s">
       <i class="fas fa-box"></i>
       <p>Branding</p>
     </div>
@@ -119,12 +121,12 @@
       </div>
     </div>
     <div class="carousel variable-width">
-      
+
       <div class="box-carousel">
         <img src="image/2.png">
         <p>Myself Magazine</p>
       </div>
-      
+
       <div class="box-carousel">
         <img src="image/Corona 2 JPEG.jpg">
         <p>Corona Beer</p>
@@ -163,9 +165,10 @@
   <section id="skill" data-spy>
     <div class="boxcenter">
       <div class="text-skill">
-        <div class="box-text-skill" >
+        <div class="box-text-skill">
           <h3 class="text-title wow bounceInDown" data-wow-duration="3s ">My Skill</h3>
-          <p class="text-content width80 wow bounceInDown" data-wow-duration="3s ">I’m a UI/UX & graphic designer. I believe that a well-designed product leads a
+          <p class="text-content width80 wow bounceInDown" data-wow-duration="3s ">I’m a UI/UX & graphic designer. I
+            believe that a well-designed product leads a
             business
           </p>
         </div>
@@ -296,11 +299,11 @@
   <footer>
     <p>@2020 Kim Hong. All rights reserved.</p>
     <div class="licon">
-    <a href="https://www.facebook.com/phuonghong2405/photos"><i class="fab fa-facebook-square"></i></a>
-    <a href="https://www.instagram.com/mackhang_/"><i class="fab fa-instagram-square"></i></a>
-    <a href="https://www.behance.net/mckhang"><i class="fab fa-behance-square"></i></a>
-    <a href="#contact"> <i class="fas fa-envelope-square"></i></a>
-  </div>
+      <a href="https://www.facebook.com/phuonghong2405/photos"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/mackhang_/"><i class="fab fa-instagram-square"></i></a>
+      <a href="https://www.behance.net/mckhang"><i class="fab fa-behance-square"></i></a>
+      <a href="#contact"> <i class="fas fa-envelope-square"></i></a>
+    </div>
   </footer>
 
 
@@ -308,8 +311,6 @@
   <script>
     new WOW().init()
   </script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="./js/slick.js"></script>
 </body>
